# Sliced-Optimal-Transport-Sampling

./: AUTHORS  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
.github/workflows/: c-cpp.yml
Mains/: slicedOptimMultiProj.cpp  slicedOptimNDBall.cpp
Math/: VecX.h  myMath.cpp  myMath.h
Tools/: dimensionsInstantiation.hpp  iopointset.cpp  iopointset.h  mapping.cpp  mapping.h  my_utility.cpp  my_utility.h
Transport/: NBallRadonManager.cpp  NBallRadonManager.h  slicedOptimalTransportNBall.h
cmake/: openmp.cmake
